--- a/sobre.html
+++ b/sobre.html
@@ -187,7 +187,7 @@
                                     <div class="container">
                                         <div class="row">
                                             <div class="col d-flex justify-content-center">
-                                                <img src="./ASSETS/cards/2.png" alt="imggestores" class="imggestores">
+                                                <img src="./ASSETS/gestoresphotos/Foto_Andrea.jpg" alt="imggestores" class="imggestores">
                                             </div>
                                         </div>
                                         <div class="row">
@@ -214,7 +214,7 @@
                                     <div class="container">
                                         <div class="row">
                                             <div class="col d-flex justify-content-center">
-                                                <img src="./ASSETS/cards/2.png" alt="imggestores" class="imggestores">
+                                                <img src="./ASSETS/gestoresphotos/foto cintia.png" alt="imggestores" class="imggestores">
                                             </div>
                                         </div>
                                         <div class="row">
@@ -243,7 +243,7 @@
                                     <div class="container">
                                         <div class="row">
                                             <div class="col d-flex justify-content-center">
-                                                <img src="./ASSETS/cards/2.png" alt="imggestores" class="imggestores">
+                                                <img src="./ASSETS/gestoresphotos/Foto_Joacir.jpg" alt="imggestores" class="imggestores">
                                             </div>
                                         </div>
                                         <div class="row">
@@ -270,7 +270,7 @@
                                     <div class="container">
                                         <div class="row">
                                             <div class="col d-flex justify-content-center">
-                                                <img src="./ASSETS/cards/2.png" alt="imggestores" class="imggestores">
+                                                <img src="./ASSETS/gestoresphotos/Foto_Maira.jpg" alt="imggestores" class="imggestores">
                                             </div>
                                         </div>
                                         <div class="row">
@@ -310,7 +310,7 @@
                         <div class="mb-3">
                             <label for="emailinput" class="form-label fontdefault">FAÇA O CADASTRO E RECEBA NOSSAS <span class="sobrehomebold">NOTÍCIAS POR E-MAIL:</span></label><br>
                             <br>
-                            <input type="email" class="caixaemail" id="emailinput" placeholder="Escreva aqui" aria-describedby="emailHelp">
+                            <input type="email" class="caixaemail" id="emailinput" placeholder="Escreva seu e-mail aqui" aria-describedby="emailHelp">
                         </div>
                         <button type="submit" class="vertodosservicosbutton fontdefault">Enviar</button>
                     </form>
