--- a/solucoes.html
+++ b/solucoes.html
@@ -72,15 +72,15 @@
     <main>
         <section class="headersols">
             <div class="container">
-                <div class="row pt-2">
-                    <div class="col d-flex justify-content-center mb-4 pt-5">
-                        <h1 class="fontdefault headersobre">Soluções</h1>
+                <div class="row pt-3">
+                    <div class="col d-flex justify-content-center mb-3 pt-5">
+                        <h1 class="fontdefault headersols">Soluções</h1>
                     </div>
                 </div>
                 <div class="row pb-4">
                     <div class="col d-flex justify-content-center mt-5 mb-5">
                         <button class="btn" type="button" id="downarrowsols">
-                            <i class="bi bi-arrow-bar-down solsfirsticon"></i>
+                            <i class="bi bi-caret-down-square solsfirsticon"></i>
                         </button>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                                 </div>
                             </div>
                             <div class="row rowsolstitle">
-                                <div class="col d-flex justify-content-center mb-3">
+                                <div class="col d-flex justify-content-center mb-3" id="contabilidadesolstitle">
                                     <p class="text-center solstitles fontdefault fs-2">Contabilidade</p>
                                 </div>
                             </div>
@@ -126,7 +126,7 @@
                                 </div>
                             </div>
                             <div class="row rowsolstitle">
-                                <div class="col d-flex justify-content-center mb-3">
+                                <div class="col d-flex justify-content-center mb-3" id="analisesolstitle">
                                     <p class="text-center solstitles fontdefault fs-2">ANÁLISE DOS NEGÓCIOS</p>
                                 </div>
                             </div>
@@ -179,7 +179,7 @@
                                 </div>
                             </div>
                             <div class="row rowsolstitle">
-                                <div class="col d-flex justify-content-center mb-3">
+                                <div class="col d-flex justify-content-center mb-3" id="planejamentosolstitle">
                                     <p class="text-center solstitles fontdefault fs-2">PLANEJAMENTO TRIBUTÁRIO</p>
                                 </div>
                             </div>
@@ -204,7 +204,7 @@
                                 </div>
                             </div>
                             <div class="row rowsolstitle">
-                                <div class="col d-flex justify-content-center mb-3">
+                                <div class="col d-flex justify-content-center mb-3" id="exigenciassolstitle1">
                                     <p class="text-center solstitles fontdefault fs-2">EXIGÊNCIAS TRABALHISTAS</p>
                                 </div>
                             </div>
@@ -228,7 +228,7 @@
                                 </div>
                             </div>
                             <div class="row rowsolstitle">
-                                <div class="col d-flex justify-content-center mb-3">
+                                <div class="col d-flex justify-content-center mb-3" id="exigenciassolstitle2">
                                     <p class="text-center solstitles fontdefault fs-2">EXIGÊNCIAS TRIBUTÁRIAS</p>
                                 </div>
                             </div>
@@ -583,7 +583,7 @@
                         <div class="mb-3">
                             <label for="emailinput" class="form-label fontdefault">FAÇA O CADASTRO E RECEBA NOSSAS <span class="sobrehomebold">NOTÍCIAS POR E-MAIL:</span></label><br>
                             <br>
-                            <input type="email" class="caixaemail" id="emailinput" placeholder="Escreva aqui" aria-describedby="emailHelp">
+                            <input type="email" class="caixaemail" id="emailinput" placeholder="Escreva seu e-mail aqui" aria-describedby="emailHelp">
                         </div>
                         <button type="submit" class="vertodosservicosbutton fontdefault">Enviar</button>
                     </form>
