--- a/contato.html
+++ b/contato.html
@@ -83,8 +83,8 @@
             <div class="container">
 
                 <!-- title  -->
-                <div class="row">
-                    <div class="col-8 col-xxl-12 offset-2 offset-xxl-0 d-flex justify-content-center my-4">
+                <div class="row pt-5">
+                    <div class="col-8 col-xxl-12 offset-2 offset-xxl-0 d-flex justify-content-center mt-5 mb-4">
                         <p class="text-center fontdefault">Com base na legislação 
                             brasileira que regula o tratamento de dados pessoais, 
                             a Lei Geral de Proteção de Dados Pessoais - LGPD - Lei 
@@ -176,7 +176,7 @@
                         <div class="mb-3">
                             <label for="emailinput" class="form-label fontdefault">FAÇA O CADASTRO E RECEBA NOSSAS <span class="sobrehomebold">NOTÍCIAS POR E-MAIL:</span></label><br>
                             <br>
-                            <input type="email" class="caixaemail" id="emailinput" placeholder="Escreva aqui" aria-describedby="emailHelp">
+                            <input type="email" class="caixaemail" id="emailinput" placeholder="Escreva seu e-mail aqui" aria-describedby="emailHelp">
                         </div>
                         <button type="submit" class="vertodosservicosbutton fontdefault">Enviar</button>
                     </form>
