--- a/home.html
+++ b/home.html
@@ -139,6 +139,11 @@
                         </div>
 
                       </div>
+
+                      <div class="col-4 col-md-6 col-lg-7 col-xl-8 d-flex justify-content-center align-items-center">
+                        <img src="./ASSETS/pexels-andrea-piacquadio-3778694.jpg" alt="sobrehome img" class="sobrehomeimg shadow mb-4">
+                      </div>
+
                     </div>
                   </div>
 
@@ -186,7 +191,7 @@
                   <div class="row">
 
                     <div class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center mb-3">
-                      <div class="card" style="width: 18rem;">
+                      <div class="card shadow-sm" style="width: 18rem;">
                         <img src="./ASSETS/cards/1.png" class="card-img-top" alt="img1">
                         <div class="card-body">
                           <h5 class="card-title">Contabilidade</h5>
@@ -197,7 +202,7 @@
                     </div>
 
                     <div class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center mb-3">
-                      <div class="card" style="width: 18rem;">
+                      <div class="card shadow-sm" style="width: 18rem;">
                         <img src="./ASSETS/cards/2.png" class="card-img-top" alt="img2">
                         <div class="card-body">
                           <h5 class="card-title">Análise de negócio</h5>
@@ -208,7 +213,7 @@
                     </div>
 
                     <div class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center mb-3">
-                      <div class="card" style="width: 18rem;">
+                      <div class="card shadow-sm" style="width: 18rem;">
                         <img src="./ASSETS/cards/3.png" class="card-img-top" alt="img3">
                         <div class="card-body">
                           <h5 class="card-title">Planejamento tributário</h5>
@@ -219,7 +224,7 @@
                     </div>
 
                     <div class="col-12 col-sm-6 col-xl-3 d-flex justify-content-center mb-3">
-                      <div class="card" style="width: 18rem;">
+                      <div class="card shadow-sm" style="width: 18rem;">
                         <img src="./ASSETS/cards/4.png" class="card-img-top" alt="img3">
                         <div class="card-body">
                           <h5 class="card-title">Exigências legais</h5>
@@ -273,7 +278,7 @@
                 <div class="container">
                   <div class="row mb-3">
                     <div class="col d-flex justify-content-center">
-                      <img class="imggestores shadow" src="./ASSETS/cards/2.png" alt="teste">
+                      <img class="imggestores shadow" src="./ASSETS/gestoresphotos/Foto_Andrea.jpg" alt="TEMPORARIO">
                     </div>
                   </div>
                   <div class="row">
@@ -289,7 +294,7 @@
                 <div class="container">
                   <div class="row mb-3">
                     <div class="col d-flex justify-content-center">
-                      <img class="imggestores shadow" src="./ASSETS/cards/2.png" alt="teste">
+                      <img class="imggestores shadow" src="./ASSETS/gestoresphotos/foto cintia.png" alt="TEMPORARIO">
                     </div>
                   </div>
                   <div class="row">
@@ -305,7 +310,7 @@
                 <div class="container">
                   <div class="row mb-3">
                     <div class="col d-flex justify-content-center">
-                      <img class="imggestores shadow" src="./ASSETS/cards/2.png" alt="teste">
+                      <img class="imggestores shadow" src="./ASSETS/gestoresphotos/Foto_Joacir.jpg" alt="TEMPORARIO">
                     </div>
                   </div>
                   <div class="row">
@@ -321,7 +326,7 @@
                 <div class="container">
                   <div class="row mb-3">
                     <div class="col d-flex justify-content-center">
-                      <img class="imggestores shadow" src="./ASSETS/cards/2.png" alt="teste">
+                      <img class="imggestores shadow" src="./ASSETS/gestoresphotos/Foto_Maira.jpg" alt="TEMPORARIO">
                     </div>
                   </div>
                   <div class="row">
@@ -358,7 +363,7 @@
               <div class="mb-3">
                 <label for="emailinput" class="form-label fontdefault">FAÇA O CADASTRO E RECEBA NOSSAS <span class="sobrehomebold">NOTÍCIAS POR E-MAIL:</span></label><br>
                 <br>
-                <input type="email" class="caixaemail" id="emailinput" placeholder="Escreva aqui" aria-describedby="emailHelp">
+                <input type="email" class="caixaemail" id="emailinput" placeholder="Escreva seu e-mail aqui" aria-describedby="emailHelp">
               </div>
               <button type="submit" class="vertodosservicosbutton fontdefault">Enviar</button>
             </form>
