--- a/home.html
+++ b/home.html
@@ -78,7 +78,7 @@
                         <div class="container">
                             <div class="row mt-3">
                                 <div class="col d-flex justify-content-center mt-5">
-                                    <p class="fs-4 fontdefault mt-5 hover-orangered shadow">Soluções especializadas em</p>
+                                    <p class="fs-4 fontdefault mt-5 hover-orangered">Soluções especializadas em</p>
                                 </div>
                             </div>
                             <div class="row">
@@ -88,7 +88,7 @@
                             </div>
                             <div class="row mb-4">
                                 <div class="col d-flex justify-content-center pt-3">
-                                    <p class="fontdefault fs-1 mb-5 hover-orangered shadow">CONTROLADORIA E GESTÃO</p>
+                                    <p class="fontdefault fs-1 mb-5 hover-orangered">CONTROLADORIA E GESTÃO</p>
                                 </div>
                             </div>
                             <div class="row mb-3">
